--- a/sections/b.main/1.introduction.tex
+++ b/sections/b.main/1.introduction.tex
@@ -3,9 +3,9 @@ The field of ontologies plays a crucial role in knowledge representation and has
 
 Ontologies provide a structured and formalized way to represent knowledge about particular domains and facilitate automatic reasoning and sharing knowledge. Nevertheless, the development and maintenance of ontologies is not without challenges. With the growing size and complexity of these ontologies, they also become more susceptible to bugs, and it becomes harder to debug these defects. Furthermore, in the context of the semantic web, automatic approaches to correcting ontologies are needed for the combination of conflicting knowledge derived from independent sources.
 
-The \SROIQ description logic is a very expressive variant of the description logics family, which can serve as the logical basis for representing knowledge in ontologies. It is also the foundation for the Web Ontology Language, a standardized language for representing ontologies on the web, enabling the creation of machine-readable ontologies. In both of these systems, ontologies are sets of axioms, and each axiom is a statement encoding some knowledge about the domain. \SROIQ extends upon basic description logics like \ALC with additional features such as complex role hierarchies, role disjointness axioms, and transitive roles. This expressive power allows for modelling complex domains with rich relationships and constraints. This expressivity, however, comes at the cost of requiring some global restrictions that must be followed to ensure the decidability of the logic.
+The \SROIQ description logic is a very expressive variant of the description logics family, which can serve as the logical basis for representing knowledge in ontologies. It is also the foundation for the Web Ontology Language, a standardized language for representing ontologies on the web, enabling the creation of machine-readable ontologies. In both of these systems, ontologies are sets of axioms, and each axiom is a statement encoding some knowledge about the domain. \SROIQ extends upon basic description logics like \ALC with additional features such as complex role hierarchies, role disjointness axioms, and transitive roles. This expressive power allows for modelling complex domains with rich relationships and constraints. This expressivity, however, comes at the cost of requiring some global restrictions that must be followed to guarantee the decidability of the logic.
 
-Many approaches to repairing inconsistent ontologies amount to identifying problematic axioms and then removing them (e.g., ~\cite{schlobach2003non,kalyanpur2005debugging,kalyanpur2006repairing,BaPS07}). Whilst this approach is obviously sufficient to guarantee that the obtained ontology is consistent, it tends to lead to information loss as a secondary effect, as outlined in detail in related works \cite{troquard2018repairing,confalonieri2020towards}. 
+Many approaches to repairing inconsistent ontologies amount to identifying problematic axioms and then removing them (e.g., ~\cite{schlobach2003non,kalyanpur2005debugging,kalyanpur2006repairing,BaPS07}). While this approach is obviously sufficient to ensure that the resulting ontology is consistent, it tends to cause information loss as a secondary effect, as outlined in detail in related works \cite{troquard2018repairing,confalonieri2020towards}. 
 Axiom weakening has been proposed as a solution for fine-grained repair to inconsistent ontologies. In these approaches, the information loss is reduced by weakening the inferential power of an axiom rather than by deleting it entirely \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards}. 
 %
 In \cite{troquard2018repairing}, axiom weakening using refinement operators has been described for \ALC and experimentally evaluated, showing that axiom weakening is able to retain more information than deletion. In \cite{confalonieri2020towards}, axiom weakening is extended to include many aspects of \SROIQ, notably omitting, however, the weakening of RBox axioms.
