--- a/sections/b.main/2.background/5.weakening.tex
+++ b/sections/b.main/2.background/5.weakening.tex
@@ -41,7 +41,7 @@ Let us now define the so-called upward and downward cover sets of concepts. The 
 
 Note here that the upward and downward covers will only yield useful results if the ontology $\Omc$ is consistent. Since they operate only over the subconcepts of $\Omc$, on their own, the upward and downward covers of concepts are missing some interesting refinements.
 \begin{example} \label{ex:up-cover-alc}
-  Let $N_C = \{ A, B, C \}$, $N_R = \{ r \}$, and $\Omc = \{ A \sqsubseteq B \}$. $\sub(\Omc) = \{\top, \bot, A, B\}$. The upward cover of $C \sqcup A$ is equal to $\UpC_\Omc(C \sqcup A) = \{ \top \}$. The potential refinement to $C \sqcup B$ will be missed even by iterated application of the upward cover because $C \sqcup B \not\in \sub(\Omc)$. Similarly, $\UpC_\Omc(\forall r.A) = \{ \top \}$, even though $\forall r.B$ is a reasonable generalization.
+  Let $N_C = \{ A, B, C \}$, $N_R = \{ r \}$, and $\Omc = \{ A \sqsubseteq B \}$. $\sub(\Omc) = \{\top, \bot, A, B\}$. The upward cover of $C \sqcup A$ is equal to $\UpC_\Omc(C \sqcup A) = \{ \top \}$. The potential refinement to $C \sqcup B$ will be missed even by repeated application of the upward cover because $C \sqcup B \not\in \sub(\Omc)$. Similarly, $\UpC_\Omc(\forall r.A) = \{ \top \}$, even though $\forall r.B$ is a reasonable generalization.
 \end{example}
 
 % define the abstract refinement operator
@@ -84,7 +84,7 @@ We define now the \emph{axiom weakening operator} using these generalization and
   \end{align*}
 \end{definition}
 
-The axioms in the set $g_\Omc(\alpha)$ are indeed weaker than $\alpha$ for every axiom $\alpha$, in the sense that, given the reference ontology $\Omc$, $\alpha$ entails them and the opposite is not necessarily true. That is, for each axiom $\alpha' \in g_\Omc(\alpha)$, $\alpha \models\Omc \alpha'$ holds.
+The axioms in the set $g_\Omc(\alpha)$ are indeed weaker than $\alpha$ for every axiom $\alpha$. This means that, given the reference ontology $\Omc$, $\alpha$ entails every axiom $\alpha' \in g_Omc(\alpha)$, but the opposite is not necessarily true. That is, for each axiom $\alpha' \in g_\Omc(\alpha)$, $\alpha \models\Omc \alpha'$ holds.
 
 \begin{example}
   Let $N_C = \{ A, B, C \}$, $N_I = \{ a \}$ and $\Omc = \{ A \sqsubseteq B, A \sqsubseteq C \}$. $\sub(\Omc) = \{\top, \bot, A, B, C\}$. $\gamma_\Omc(A) = \{ A, B, C \}$ and $\rho_\Omc(B) = \{ B, A \}$. The weakenings of $B \sqsubseteq A$ with respect to $\Omc$ are therefore $g_\Omc(B \sqsubseteq A) = \{ B \sqsubseteq A, B \sqsubseteq B, B \sqsubseteq C, A \sqsubseteq A \}$. Similarly, $g_\Omc(A(a)) = \{ A(a), B(a), C(a) \}$.
@@ -92,7 +92,7 @@ The axioms in the set $g_\Omc(\alpha)$ are indeed weaker than $\alpha$ for every
 
 In order to apply the weakening operator to the problem of repairing inconsistent ontologies, we follow the algorithm depicted in \cref{algo:repair-weaken-alc}. First, as mentioned above, the computation of a non-trivial upward and downward cover set is only possible when using a consistent ontology. We, therefore, need to first find a consistent subontology $\Omcref$ of $\Omc$ to serve as \emph{reference ontology}. One possibility outlined in \cite{troquard2018repairing} is to select a random maximal consistent subset of $\Omc$. Another option is to choose the intersection of some (or all) maximal consistent subsets of $\mathcal{O}$ (e.g., \cite{LLRRS10}). This latter option has the advantage of using only information for the weakening that is likely to be correct. On the other hand, it will lead to diminished upward and downward covers and therefore can reduce the number of possible weakenings.
 
-Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad axiom'' $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. As for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One is based on choosing axioms at random, and another implementation randomly samples a number of (or all the) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and returns one axiom from the ones occurring the most often. The weaker axiom is chosen from the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, their algorithm is almost surely going to terminate. It has yet to be shown whether this holds also for the variation presented in this paper. A similar effect of almost sure termination could also be achieved by maintaining a constant non-zero probability of removing the axiom at each step.
+Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad axiom'' $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. As for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One is based on choosing axioms at random, and another implementation randomly samples some (or all) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and returns one axiom from the ones occurring the most often. The weaker axiom is chosen from the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, their algorithm is almost surely going to terminate. It has yet to be shown whether this holds also for the variation presented in this paper. A similar effect of almost sure termination could also be achieved by maintaining a constant non-zero probability of removing the axiom at each step.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
