--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -1,5 +1,5 @@
 % Introduce what description logics are 
-Formally, an ontology is a set of statements expressed in an appropriate logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using several different formalisms, for use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation.
+Formally, an ontology is a set of statements expressed in an appropriate logical language. The purpose of ontologies is the formal description of a specific domain of interest. While ontologies can be represented using several different formalisms, for use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation.
 
 \emph{Description logics} (DL) are often used for building ontologies. They include a family of related knowledge representation languages and are often fragments of FOL\footnote{While DLs are fragments of FOL in the sense that for every ontology in a given DL, there exists a FOL theory that has the same models, the syntax used by DLs is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the DL $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different DLs have been developed for different applications and allow for varying levels of expressivity.
 
