--- a/sections/b.main/2.background/4.repair.tex
+++ b/sections/b.main/2.background/4.repair.tex
@@ -32,14 +32,14 @@ We can observe that every classical repair is, in fact, a valid repair, and that
 Generating a classical repair can be achieved in a number of equivalent ways. One way to compute an optimal classical repair is using justifications and hitting sets \cite{reiter1987theory}.
 
 \begin{definition}
-  Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an axiom $\Omc \models \alpha$, $\Omc_s \not\models \alpha$, a \emph{justification} for $\alpha$ in $\Omc$ is a minimal subset $J \subseteq \Omc_r$ such that $J \cup \Omc_s \models \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$ in $\Omc$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \empty$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
+  Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an axiom $\Omc \models \alpha$, $\Omc_s \not\models \alpha$, a \emph{justification} for $\alpha$ with respect to $\Omc$ is a minimal subset $J \subseteq \Omc_r$ such that $J \cup \Omc_s \models \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \emptyset$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
 \end{definition}
 
 \begin{example}
   Given the vocabulary $N_C = \{ C, D \}$ and $N_I = \{ a \}$, the ontology $\Omc = \{ D \sqsubseteq \lnot C, D(a), C(a) \}$ is inconsistent. A possible (optimal) classical repair to restore the consistency is $\Omc' = \{ D(a), C(a) \}$.
 \end{example}
 
-Justifications are necessarily non-empty since $\Omc_s \not\models \alpha$, and therefore hitting sets and minimal hitting sets always exist. Given any minimal hitting set $H$ for the justification $J_1, \dots, J_n$ of $\alpha$ in $\Omc$, the ontology $\Omc' = \Omc \setminus H$ is an optimal classical repair of $\Omc$ with respect to $\alpha$.
+Justifications are always non-empty since $\Omc_s \not\models \alpha$, and therefore hitting sets and minimal hitting sets necessarily exist. Given any minimal hitting set $H$ for the justification $J_1, \dots, J_n$ of $\alpha$ in $\Omc$, the ontology $\Omc' = \Omc \setminus H$ is an optimal classical repair of $\Omc$ with respect to $\alpha$.
 
 This algorithm for computing optimal classical repairs requires the computation of all justifications, which can in general be very computationally intensive. Black-box approaches for computing justifications have been proposed \cite{kalyanpur2007finding,schlobach2003non,schlobach2007debugging} that compute justifications by repeatedly making calls to pre-existing highly-optimized reasoners. To compute all justification, however, they may in the worst case, need to make an exponential number of calls to the reasoner. Nevertheless, in practice, they may often be fast enough. For example, the hitting-set-tree based algorithm presented in \cite{kalyanpur2007finding} can be used to compute both all justifications and all hitting sets. There exist also glass-box approaches to computing justifications \cite{kalyanpur2007finding}, that require only a single reasoning request to find justifications, but they also require specialized, generally less efficient, reasoners.
 
