--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -2,14 +2,14 @@
 
 The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion is that of the interpretation. And \emph{interpretation} $I = \langle \Delta^I, \cdot^I \rangle$ consists of a set $\Delta^I$ called the \emph{domain} of $I$, and an \emph{interpretation function} $\cdot^I$. The interpretation function maps the vocabulary elements as follows:
 \begin{itemize}
-  \item for each individual name $a \in N_I$ to an element $a^I \in \Delta^I$ in the domain,
-  \item for each concept name $C \in N_C$ to a subset $C^I \subseteq \Delta^I$ of the domain, and
-  \item for each role name $r \in N_R$ to a relation $r^I \subseteq \Delta^I \times \Delta^I$ over the domain.
+  \item Each individual name $a \in N_I$ is mapped to an element $a^I \in \Delta^I$ in the domain.
+  \item Each concept name $C \in N_C$ is mapped to a subset $C^I \subseteq \Delta^I$ of the domain.
+  \item Each role name $r \in N_R$ is mapped to a relation $r^I \subseteq \Delta^I \times \Delta^I$ over the domain.
 \end{itemize}
 An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I$. We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^I$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^I$, that is  $\left(r^-\right)^I = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^I \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
 \begin{itemize}
   \item The top concept is true for every individual in the domain, therefore $\top^I = \Delta^I$.
-  \item The bottom concept is true for no individual, hence $\bot^I = \empty$ where $\empty$ represents the empty set.
+  \item The bottom concept is true for no individual, hence $\bot^I = \emptyset$ where $\emptyset$ represents the empty set.
   \item Nominal concepts contain exactly the specified individuals, that is $\{ a \}^I = \{ a^I \}$.
   \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^I = \Delta^I \setminus C^I$.
   \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^I = C^I \cup D^I$.
@@ -17,8 +17,8 @@ An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I
   \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^I = \{ \delta_1 \in \Delta^I \mid \exists \delta_2 \in \Delta^I \, . \; \langle \delta_1, \delta_2 \rangle \in R^I \, \land \, \delta_2 \in C^I  \}$.
   \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^I = \{ \delta_1 \in \Delta^I \mid \forall \delta_2 \in \Delta^I \, . \; \langle \delta_1, \delta_2 \rangle \in R^I \to \delta_2 \in C^I \}$.
   \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^I = \{ \delta \in \Delta^I \mid \langle \delta, \delta \rangle \in R^I\}$.
-  \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \less n \}$, where $|S|$ denotes the cardinality of a set $S$.
-  \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \more n \}$.
+  \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the extension of the concept $C$, that is  $(\less n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \less n \}$, where $|X|$ denotes the cardinality of a set $X$.
+  \item $\more n R.C$ corollary to the case above indicates the elements of the domain that have at least $N$ such $R$-related elements, \\$(\more n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \more n \}$.
 \end{itemize}
 
 \begin{example}
@@ -37,18 +37,18 @@ An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I
 
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
-The purpose of the (extended) interpretation function is mainly to determine the satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $I$. If this is the case, the interpretation $I$ satisfies $\alpha$, written $I \models \alpha$. If an interpretation $I$ satisfies an axiom $\alpha$, we also say that $I$ is a model of $\alpha$.
+The main purpose of this extended interpretation function is to determine the satisfaction of axioms. We define now when an axiom $\alpha$ is true, or holds, in a specific interpretation $I$. If this is the case, the interpretation $I$ satisfies $\alpha$, written $I \models \alpha$. We also say that $I$ is a model of $\alpha$.
 \begin{itemize}
-  \item A RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $I$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^I$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^I$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $I \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^I \circ \cdots \circ S_n^I \subseteq R^I$ where $\circ$ denotes the composition of the relations.
-  \item A role disjointness axiom $\disjoint(S, R)$ hold if and only if the extensions of $R$ and $S$ are disjoint, formally $I \models \disjoint(S, R) \iff S^I \cap R^I = \empty$.
+  \item A RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $I$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^I$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^I$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $I \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^I \circ \cdots \circ S_n^I \subseteq R^I$ where $\circ$ denotes the composition of relations.
+  \item A role disjointness axiom $\disjoint(S, R)$ hold if and only if the extensions of $R$ and $S$ are disjoint, formally $I \models \disjoint(S, R) \iff S^I \cap R^I = \emptyset$.
   \item A GCI $C \sqsubseteq D$ is true if and only if the extension of $C$ is fully contained in the extension of $D$, hence $I \models C \sqsubseteq D \iff C^I \subseteq D^I$.
-  \item A concept assertion $C(a)$ holds if and only if the individual that $a$ is mapped to by $\cdot^I$ is in the concept extension of $C$, therefore $I \models C (a) \iff a^I \in C^I$.
-  \item A role assertion $R(a, b)$ holds if and only if the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $I \models R(a, b) \iff \langle a^I, b^I \rangle \in R^I$.
+  \item A concept assertion $C(a)$ holds if and only if the individual that $a$ is mapped to by $\cdot^I$ is in the extension of the concept $C$, therefore $I \models C (a) \iff a^I \in C^I$.
+  \item A role assertion $R(a, b)$ holds if and only if the individuals denoted by the names $a$ and $b$ are connected in the extension of $R$, thus $I \models R(a, b) \iff \langle a^I, b^I \rangle \in R^I$.
   \item A negative role assertion $\lnot R(a, b)$ is true exactly then when the corresponding role assertion $R(a, b)$ is false. Equivalently, $I \models \lnot R(a, b) \iff \langle a^I, b^I \rangle \not\in R^I$.
   \item An equality assertion $a = b$ holds if and only if the individuals identified by $a$ and $b$ are the same element of the domain, formally written $I \models a = b \iff a^I = b^I$.
   \item Dual to the above, $a \not = b$ holds if and only if the names $a$ and $b$ denote different elements, accordingly $I \models a \not= b \iff a^I \not= b^I$.
 \end{itemize}
-We say a set of axioms holds in an interpretation $I$ if and only if every axiom of the set hold in $I$. Accordingly, $I$ satisfies a ontology $\Omc$, written $I \models \Omc$, if and only if $I$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $I \models \Omc \iff \forall \alpha \in \Omc \, . \; I \models \alpha$. If $I$ satisfies $\Omc$, we say $I$ is a model of $\Omc$.
+We say a set of axioms holds in an interpretation $I$ if and only if every axiom of the set hold in $I$. Accordingly, $I$ satisfies a ontology $\Omc$, written $I \models \Omc$, if and only if $I$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $I \models \Omc \iff \forall \alpha \in \Omc : I \models \alpha$. If $I$ satisfies $\Omc$, we say $I$ is a model of $\Omc$.
 
 \begin{example}
   Given the interpretation $I = \langle \Delta^I, \cdot^I \rangle$ where $\Delta^I = \{ 1, 2, 3, 4, 5, 6, 7 \}$ and $P^I = \{ 2, 3, 5, 7 \}$, $E^I = \{ 2, 4, 6 \}$, $o^I = 1$, $t^I = 2$, and $s^I = \{ \langle 1, 2 \rangle,\allowbreak \langle 2, 3 \rangle,\allowbreak \langle 3, 4 \rangle,\allowbreak \langle 4, 5 \rangle,\allowbreak \langle 5, 6 \rangle,\allowbreak \langle 6, 7 \rangle \}$, the following axioms are satisfied by $I$.
@@ -104,11 +104,11 @@ The problem of axiom entailment can be reduced to determining the satisfiability
     \hline
   \end{tabular}
   \label{tab:entailment-reduction}
-  \caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking the entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking the unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
+  \caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$. This means, checking the entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking the unsatisfiability of $\Omc \cup B$.}
 \end{table}
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
 
-A concept $C$ is satisfiable with respect to $\Omc$ if and only if there exists a model of the ontology $I \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^I \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example, $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
+A concept $C$ is satisfiable with respect to $\Omc$ if and only if there exists a model of the ontology $I \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^I \not= \emptyset$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example, $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
 
-Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $I \models \Omc$ maps the concept to the empty set, that is $C^I = \empty$. Since the other direction is trivial, we can rewrite this as $C^I \subseteq \empty$. It follows that since $\bot^I = \empty$ every such model satisfies $I \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for the unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
+Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $I \models \Omc$ maps the concept to the empty set, that is $C^I = \emptyset$. Since the other direction is trivial, we can rewrite this as $C^I \subseteq \emptyset$. It follows that since $\bot^I = \emptyset$ every such model satisfies $I \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for the unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
