--- a/sections/b.main/4.implementation/1.prototype.tex
+++ b/sections/b.main/4.implementation/1.prototype.tex
@@ -28,7 +28,7 @@ The procedure $\textsc{FindBadAxiom}$ may also be implemented in several differe
 
 The prototype implementation uses the OWL API \cite{horridge2011owl,owlapi} to represent axioms in memory and interface with off-the-shelf reasoners. The reasoners FaCT++, JFact, HermiT, and Openllet have been used in the prototype. Creating a new reasoner instance for each time an entailment is checked or consistency must be tested is however inefficient. One reason for this is that instantiating a reasoner is relatively expensive. Further, all the mentioned reasoners are, to some degree, able to keep some information computed for previous queries and exploit it to speed up subsequent ones. For these reasons, it is desirable to reuse reasoners as much as possible. To facilitate this, a class \inlinecode{Ontology} has been created that contains a set of axioms (split into static $\Omc_s$ and refutable $\Omc_r$) as well as a reference to a set of already initialized reasoners. This class contains the methods for checking consistency and entailment, implementing them by taking one of the initialized reasoners, updating the reasoner's internal state by adding and removing axioms to reflect the state of the ontologies axioms, and then calling the reasoners axioms. Only if no reasoner is available, will a new one be created and initialized. One thing this setup allows for is the creation of multiple ontologies that point to the same set of reasoners. To achieve this, it is recorded which ontologies use the reasoners, and if they are no longer needed, they can be disposed of to free up global resources.
 
-To improve performance, particularly for running the test cases, running work in parallel has been considered. One problem with this approach is that all reasoners are linked to a global \inlinecode{OWLOntologyManager} object. There is a concurrent version of this object, but not all reasoners are implemented in a way to make concurrent access to this object possible. The FaCT++ reasoner \cite{factpp} had a significantly severe problem, where it would listen to and apply all changes made to any ontology in the ontology manager. Since this manager can, however, contain multiple ontologies, this lead to wrong reasoning results. These issues have been resolved in the slightly modified version of the FaCT++ reasoner used for this thesis.\footnote{The version of FaCT++ used for this thesis is available at \url{https://github.com/rolandbernard/factplusplus}} This version had some further modifications, like fixing an issue with the handling of annotated axioms and adding automatic loading of native dependencies, something for which previously an environment variable had to be set pointing at the dynamic library. After these changes, and some additional modifications in the prototype code, the tests can now be run concurrently. Further, the prototype contains some experiments that use multiple threads, sharing the same axiom weakening operator and cache, to compute multiple weakenings in parallel.
+To improve performance, particularly for running the test cases, running work in parallel has been considered. One problem with this approach is that all reasoners are linked to a global \inlinecode{OWLOntologyManager} object. There is a concurrent version of this object, but not all reasoners are implemented in a way to make concurrent access to this object possible. The FaCT++ reasoner \cite{factpp} had a significantly severe problem, where it would listen to and apply all changes made to any ontology in the ontology manager. Since this manager can, however, contain multiple ontologies, this lead to wrong reasoning results. These issues have been resolved in the slightly modified version of the FaCT++ reasoner used for this thesis.\footnote{The version of FaCT++ used for this thesis is available at \url{https://github.com/rolandbernard/factplusplus}} This version had some further modifications, like fixing an issue with the handling of annotated axioms and adding automatic loading of native dependencies, something for which previously an environment variable had to be set pointing at the dynamic library. After these changes, and some additional modifications to the prototype, the tests can now be run concurrently. Further, the prototype contains some experiments that use multiple threads, sharing the same axiom weakening operator and cache, to compute multiple weakenings in parallel.
 
 \subsection{Computing Minimal Subsets}\label{minimal-set-impl}
 
@@ -48,7 +48,7 @@ For some operations, maximal consistent subsets and minimal inconsistent subsets
   \label{algo:find-minimal-subset-simple}
 \end{algorithm}
 
-One simple way to compute a single minimal subset is by starting with the complete set. Then one goes through all the elements and tries to remove them. If after removal the predicate still holds, the element is removed, otherwise, it is kept. This algorithm is listed in \cref{algo:find-minimal-subset-simple}. After having tested and possibly removed all elements, the remaining elements form a minimal subset. To see this, assume we end up with a set $A'$ and there exists an element $a \in A'$ for which $p(A' \setminus \{ a \})$ is true. Since all elements in $A$ have already been tested once, $p(A'' \setminus \{ a \})$ was false for some set $A'' \supseteq A'$. However, this means $A' \setminus \{ a \} \subseteq A'' \setminus \{ a \}$ and since $p$ is monotone and $p(A' \setminus \{ a \})$ is true, $p(A'' \setminus \{ a \})$ must also be true. This is a contradiction since if $p(A'' \setminus \{ a \})$ had been true we would have removed $a$ from the set.
+One simple way to compute a single minimal subset with respect to $p$ is by starting with the complete set. Then one goes through all the elements and tries to remove them. If after removal the predicate still holds, the element is removed, otherwise, it is kept. This algorithm is listed in \cref{algo:find-minimal-subset-simple}. After having tested and possibly removed all elements, the remaining elements form a minimal subset. To see this, assume we end up with a set $A'$ and there exists an element $a \in A'$ for which $p(A' \setminus \{ a \})$ is true. Since all elements in $A$ have already been tested once, $p(A'' \setminus \{ a \})$ was false for some set $A'' \supseteq A'$. However, this means $A' \setminus \{ a \} \subseteq A'' \setminus \{ a \}$ and since $p$ is monotone and $p(A' \setminus \{ a \})$ is true, $p(A'' \setminus \{ a \})$ must also be true. This is a contradiction since if $p(A'' \setminus \{ a \})$ had been true we would have removed $a$ from the set.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
@@ -76,7 +76,7 @@ One simple way to compute a single minimal subset is by starting with the comple
   \label{algo:find-minimal-subset}
 \end{algorithm}
 
-This same idea can be made somewhat more efficient in cases where the minimal subsets are only relatively small compared to the complete set. This is often the case for finding minimal inconsistent subsets or minimal correction subsets. For this, the progression-based algorithm presented in \cite{marques2013minimal} has been implemented. The algorithm works by trying to remove more than one element at a time, and if that fails, binary search is used to locate the first element which must be included in the minimal set.
+This same idea can be made somewhat more efficient in cases where the minimal subsets are only relatively small compared to the complete set. This is often the case for finding minimal inconsistent subsets or minimal correction subsets. For this, the progression-based algorithm presented in \cite{marques2013minimal} has been implemented as depicted in \cref{algo:find-minimal-subset}. The algorithm works by trying to remove more than one element at a time, and if that fails, binary search is used to locate the first element which must be included in the minimal set.
 To compute multiple (but not necessarily all) minimal sets, the \textsc{MergeXplain} algorithm proposed in \cite{shchekotykhin2015mergexplain} has also been implemented, but was not used during the evaluation.
 
 \begin{algorithm}[ht]
@@ -123,7 +123,7 @@ Rather than rely solely on the internal reuse of the reasoner or apply only a si
     \ElsIf{$\langle C, D \rangle \not\in P$}
       \State $R \gets \mathit{False}$
     \Else
-      \State $R \gets \textsc{TestSubsumtion}(C, D)$
+      \State $R \gets \textsc{TestSubsumption}(C, D)$
       \If{$R$}
         \State $K \gets K \cup \{ \langle C', D' \rangle \mid \langle C', C \rangle \in K \text{ and } \langle D, D' \rangle \in K \}$
         \State $P \gets P \setminus \{ \langle D, D' \rangle \mid \langle D', C' \rangle \in K \text{ and } \langle C, C' \rangle \not\in P \}$
@@ -134,18 +134,18 @@ Rather than rely solely on the internal reuse of the reasoner or apply only a si
     \EndIf
     \State Return $R$
   \end{algorithmic}
-  \caption{$\textsc{CachedTestSubsumtion}(C, D)$}
+  \caption{$\textsc{CachedTestSubsumption}(C, D)$}
   \label{algo:cached-subs}
 \end{algorithm}
 
-It follows a brief description of the algorithm used for caching subsumptions listed in \cref{algo:cached-subs}. We keep three global variables, the set of all elements that have already been encountered at least once $S$, the set of know tuples $K$, and the set of possible tuples $P$. When querying a subsumption, it is first ensured that if one or both of the elements has not yet been seen before, the appropriate tuples are inserted into $K$ and $P$. Then it is checked whether the result can be determined using the known information, and if not, the procedure $\textsc{TestSubsumtion}$ is used to compute the correct result. For every new negative result, the possible tuples are reduced and for every positive result, known tuples are added, and possible tuples may also be removed. The algorithm is based on the two implications
+It follows a brief description of the algorithm used for caching subsumptions listed in \cref{algo:cached-subs}. We keep three global variables, the set of all elements that have already been encountered at least once $S$, the set of know tuples $K$, and the set of possible tuples $P$. When querying a subsumption, it is first ensured that if one or both of the elements has not yet been seen before, the appropriate tuples are inserted into $K$ and $P$. Then it is checked whether the result can be determined using the known information, and if not, the procedure $\textsc{TestSubsumption}$ is used to compute the correct result. For every new negative result, the possible tuples are reduced and for every positive result, known tuples are added, and possible tuples may also be removed. The algorithm is based on the two implications
 \begin{align*}
   C \sqsubseteq_\Omc D \text{ and } D \sqsubseteq_\Omc E &\implies C \sqsubseteq_\Omc E \enspace,\text{ and} \\
   C \not\sqsubseteq_\Omc D \text{ and } C \sqsubseteq_\Omc E \text{ and } F \sqsubseteq_\Omc D &\implies E \not\sqsubseteq_\Omc F \enspace.
 \end{align*}
 The first implication follows trivially from the fact that subsumption between concepts or roles is transitive. The second also follows from transitivity. It can be observed that, if $C \sqsubseteq_\Omc E$ and $F \sqsubseteq_\Omc D$, if $E \sqsubseteq_\Omc F$ were to hold, then $C \sqsubseteq_\Omc D$ would also have to hold by transitivity. Separate instances of $S$, $K$ and $P$ are used for the computation of concept and role subsumptions.
 
-For actually computing subsumptions between roles, $\textsc{TestSubsumtion}$ is a simple call to the reasoner. However, for computing subsumption between concepts, one further step is used. It is applied immediately before possibly calling the reasoner. If any of the following rules can be computed using only the information in $S$, $K$, and $P$, the reasoner is not called, and the result returned from $\textsc{TestSubsumtion}$. Otherwise, the reasoner is used as usual to compute the subsumption.
+For actually computing subsumptions between roles, $\textsc{TestSubsumption}$ is a simple call to the reasoner. However, for computing subsumption between concepts, one further step is used. It is applied immediately before possibly calling the reasoner. If any of the following rules can be computed using only the information in $S$, $K$, and $P$, the reasoner is not called, and the result returned from $\textsc{TestSubsumption}$. Otherwise, the reasoner is used as usual to compute the subsumption.
 \begin{align*}
   C_i \not\sqsubseteq_\Omc D \text{ for some } i \in \{ 1, \dots, n \} &\implies C_1 \sqcup \cdots \sqcup C_n \not\sqsubseteq_\Omc D \\
   C_i \sqsubseteq_\Omc D \text{ for all } i \in \{ 1, \dots, n \} &\implies C_1 \sqcup \cdots \sqcup C_n \sqsubseteq_\Omc D \\
@@ -157,5 +157,5 @@ For actually computing subsumptions between roles, $\textsc{TestSubsumtion}$ is 
 
 \subsection{Finding Best Repairs}\label{best-repair-impl}
 
-The implementation contains also some approaches for finding the ``best repair'' based on some quality function given to the algorithm. None of these algorithms were however evaluated since they are significantly slower than the others, needing to compute not only multiple repairs but also the quality estimation for each of them. The simplest algorithm implemented for this purpose simply computes some (or all) maximal consistent subsets and selects the one that performs the based on the given function. Another is to compute multiple repairs using axiom weakening, following the algorithm in \cref{algo:repair-weaken}, and select the one that has the highest quality based on the given function. A more sophisticated approach that was also realized is to apply a Monte-Carlo search \cite{coulom2006efficient} based algorithm to explore the tree formed by weakening. In this case, both the possible choices of bad axioms and the selection of the weakening are explored using search.
+The implementation contains also some approaches for finding the ``best repair'' based on some quality function given to the algorithm. None of these algorithms were however evaluated since they are significantly slower than the others, needing to compute not only multiple repairs, but also the quality estimation for each of them. The simplest algorithm implemented for this purpose simply computes some (or all) maximal consistent subsets and selects the one that performs the based on the given function. Another is to compute multiple repairs using axiom weakening, following the algorithm in \cref{algo:repair-weaken}, and select the one that has the highest quality based on the given function. A more sophisticated approach that was also realized is to apply a Monte-Carlo search \cite{coulom2006efficient} based algorithm to explore the tree formed by weakening. In this case, both the possible choices of bad axioms and the selection of the weakening are explored using search.
 
